# kda-csa-hca-fusion

./: .gitignore  CODE_REVIEW.md  COMPARISON.md  EXPERIMENT_IMPACT_REVIEW_20_ROUNDS.md  EXPERIMENT_RESULTS_IMPACT_ANALYSIS.md  EXPERIMENT_RESULT_BUG_AUDIT_3_ROUNDS.md  EXPERIMENT_RESULT_BUG_AUDIT_MANUAL_PLUS20_STOP.md  EXPERIMENT_RESULT_BUG_AUDIT_PLUS20.md  EXPERIMENT_RESULT_BUG_AUDIT_ROUND10.md  EXPERIMENT_RESULT_BUG_AUDIT_ROUND4.md  EXPERIMENT_RESULT_BUG_AUDIT_ROUND5.md  EXPERIMENT_RESULT_BUG_AUDIT_ROUND6.md  EXPERIMENT_RESULT_BUG_AUDIT_ROUND7_OR_STOP.md  EXPERIMENT_RESULT_BUG_AUDIT_ROUND8.md  EXPERIMENT_RESULT_BUG_AUDIT_ROUND8_NO_NEW_BUGS.md  EXPERIMENT_RESULT_BUG_AUDIT_ROUND9.md  EXPERIMENT_RESULT_BUG_AUDIT_STOP_AFTER_NO_ISSUE.md  EXPERIMENT_RESULT_IMPACT_AUDIT_2026_07_13.md  LICENSE  README.md  add_rope_and_bench.py  conftest.py  dyn_csa_experiment.ipynb  enhance_modern_components.py  kaggle_setup.py  make_figures.py  method_analysis.py  ops_csa.py  ops_decoding_cache.py  ops_fused.py  ops_hca.py  ops_kda.py  ops_kda_backend.py  paper.md  pyproject.toml  requirements.txt  run_ablation.py  run_all.py  run_autodl_lm.sh  run_benchmark.py  (+9 more)
.github/workflows/: llm-bug-fix.yml
results/: exp1_correctness.json  exp2_benchmark.json  exp3_kv_cache.json  exp4_mqar.json  exp5_ablation.json  exp6_decoding.json  summary.json
