[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kda-csa-hca-fusion"
version = "0.1.0"
description = "Naive PyTorch reference implementation and experimental harness for the KDA+CSA+HCA hybrid linear-attention architecture."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "kda-csa-hca-fusion contributors" },
]
keywords = [
    "linear-attention",
    "kda",
    "csa",
    "hca",
    "deepseek-v4",
    "kimi-linear",
    "long-context",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # P0 fix: pin UPPER bounds. torch 2.3 vs 2.6 differ in
    # ``scaled_dot_product_attention`` behaviour (kernel selection,
    # padding handling) which affects the softmax baseline numbers in
    # ``run_benchmark`` / ``run_quality``. einops 0.8 changed the
    # default ``rearrange`` error message format. matplotlib 3.10
    # dropped several deprecated APIs. Without upper bounds, a fresh
    # ``pip install -e .`` on a new machine can silently pull a
    # breaking release and produce numerically different results from
    # the published ones. The bounded ranges below match the versions
    # used to generate the committed historical results.
    "torch>=2.2,<2.7",
    "einops>=0.6,<0.9",
    "matplotlib>=3.5,<3.11",
    "numpy>=1.21,<2.3",
    # scipy is optional; run_quality.py has a fallback t-distribution
    # table when scipy is missing. Listed here so `pip install -e .`
    # pulls it in for the canonical statistical-test path. scipy 1.13+
    # changed the default ``stats.t.ppf`` numerical precision in edge
    # cases.
    "scipy>=1.7,<1.15; python_version >= '3.10'",
]

[project.optional-dependencies]
# P1 fix: declare the full dev toolchain so
# ``pip install -e .[dev]`` brings in every tool a contributor needs.
# Previously only ``pytest`` was listed, so contributors had to
# discover scipy / mypy / ruff requirements by trial and error (the
# test suite uses scipy.stats.t.ppf with a fallback table; the codebase
# has typing annotations that mypy can check; the style is
# black-isort-ruff compatible).
dev = [
    "pytest>=7.0,<9.0",
    "pytest-xdist>=3.0,<5.0",  # parallel test execution; -n auto
    "scipy>=1.7,<1.15",        # for stats.t.ppf (CI95 / Bonferroni)
    "mypy>=1.0,<2.0",          # type-check the annotations
    "ruff>=0.4,<0.10",         # linter + formatter (PEP 8 compliant)
]

[project.urls]
"Source" = "https://gitee.com/qwe12345678/kda-csa-hca-fusion"

# Treat the repository root as a flat package (the modules live at the top
# level, not under a `kch_fusion/` directory). This lets `pip install -e .`
# make `ops_kda`, `ops_csa`, `ops_hca`, `ops_fused`, `run_*`, etc. importable
# from anywhere — eliminating the `sys.path.insert(0, os.path.dirname(...))`
# hacks scattered across the scripts.
#
# Note: the legacy `sys.path.insert` calls are kept in the scripts for
# backward compatibility with the `python script.py` invocation pattern;
# they are no-ops once the package is installed.
[tool.setuptools]
py-modules = [
    "ops_kda",
    "ops_csa",
    "ops_hca",
    "ops_fused",
    "run_correctness",
    "run_benchmark",
    "run_quality",
    "run_ablation",
    "run_decoding",
    "run_kv_cache",
    "run_all",
    "make_figures",
    "method_analysis",
    "kaggle_setup",
    "test_figures",
]

[tool.pytest.ini_options]
# Make pytest discover the test functions in run_correctness.py and
# test_figures.py. The test functions use the standard `test_*` naming
# convention but the files also contain a `main()` that the custom runner
# calls; pytest will collect only the `test_*` functions, which is the
# desired behavior for selective / parallel runs.
python_files = ["run_correctness.py", "test_figures.py", "test_*.py"]
python_functions = ["test_*"]
testpaths = ["."]
# Register the ``slow`` marker (used by conftest.py to tag long-running
# tests so ``pytest -m "not slow"`` can skip them during fast CI loops).
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
