[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kda-csa-hca-fusion"
version = "0.1.0"
description = "Naive PyTorch reference implementation and experimental harness for the KDA+CSA+HCA hybrid linear-attention architecture."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "kda-csa-hca-fusion contributors" },
]
keywords = [
    "linear-attention",
    "kda",
    "csa",
    "hca",
    "deepseek-v4",
    "kimi-linear",
    "long-context",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # P0 fix: pin UPPER bounds. torch 2.3 vs 2.6 differ in
    # ``scaled_dot_product_attention`` behaviour (kernel selection,
    # padding handling) which affects the softmax baseline numbers in
    # ``run_benchmark`` / ``run_quality``. einops 0.8 changed the
    # default ``rearrange`` error message format. matplotlib 3.10
    # dropped several deprecated APIs. Without upper bounds, a fresh
    # ``pip install -e .`` on a new machine can silently pull a
    # breaking release and produce numerically different results from
    # the published ones. The bounded ranges below match the versions
    # used to generate the committed historical results.
    "torch>=2.2,<2.7",
    "einops>=0.6,<0.9",
    "matplotlib>=3.5,<3.11",
    "numpy>=1.21,<2.3",
    # scipy is optional; run_quality.py has a fallback t-distribution
    # table when scipy is missing. Listed here so `pip install -e .`
    # pulls it in for the canonical statistical-test path. scipy 1.13+
    # changed the default ``stats.t.ppf`` numerical precision in edge
    # cases.
    "scipy>=1.7,<1.15; python_version >= '3.10'",
]

[project.optional-dependencies]
# P1 fix: declare the full dev toolchain so
# ``pip install -e .[dev]`` brings in every tool a contributor needs.
# Previously only ``pytest`` was listed, so contributors had to
# discover scipy / mypy / ruff requirements by trial and error (the
# test suite uses scipy.stats.t.ppf with a fallback table; the codebase
# has typing annotations that mypy can check; the style is
# black-isort-ruff compatible).
dev = [
    "pytest>=7.0,<9.0",
    "pytest-xdist>=3.0,<5.0",  # parallel test execution; -n auto
    "scipy>=1.7,<1.15",        # for stats.t.ppf (CI95 / Bonferroni)
    "mypy>=1.0,<2.0",          # type-check the annotations
    "ruff>=0.4,<0.10",         # linter + formatter (PEP 8 compliant)
]

[project.urls]
"Source" = "https://gitee.com/qwe12345678/kda-csa-hca-fusion"

# Treat the repository root as a flat package (the modules live at the top
# level, not under a `kch_fusion/` directory). This lets `pip install -e .`
# make `ops_kda`, `ops_csa`, `ops_hca`, `ops_fused`, `run_*`, etc. importable
# from anywhere — eliminating the `sys.path.insert(0, os.path.dirname(...))`
# hacks scattered across the scripts.
#
# Note: the legacy `sys.path.insert` calls are kept in the scripts for
# backward compatibility with the `python script.py` invocation pattern;
# they are no-ops once the package is installed.
[tool.setuptools]
py-modules = [
    "ops_kda",
    "ops_csa",
    "ops_hca",
    "ops_fused",
    "ops_decoding_cache",
    "run_correctness",
    "run_benchmark",
    "run_quality",
    "run_ablation",
    "run_decoding",
    "run_kv_cache",
    "run_all",
    "make_figures",
    "method_analysis",
    "kaggle_setup",
    # CT6 fix: removed ``test_figures`` from py-modules. Test files should
    # NOT be installed as importable top-level modules — ``pip install -e .``
    # would otherwise make ``import test_figures`` succeed in production
    # environments, conflating test code with library code. ``run_correctness``
    # is kept because it doubles as a pytest collection target AND a
    # standalone script the README references; ``test_figures`` is purely a
    # test file.
]

[tool.pytest.ini_options]
# Make pytest discover the test functions in run_correctness.py and
# test_figures.py. The test functions use the standard `test_*` naming
# convention but the files also contain a `main()` that the custom runner
# calls; pytest will collect only the `test_*` functions, which is the
# desired behavior for selective / parallel runs.
python_files = ["run_correctness.py", "test_figures.py", "test_*.py"]
python_functions = ["test_*"]
testpaths = ["."]
# CT8 fix: add ``--strict-markers`` and ``--strict-config`` to ``addopts``.
# Without ``--strict-markers``, a typo like ``@pytest.mark.sloww`` silently
# creates an unknown marker instead of raising — masking the typo. Without
# ``--strict-config``, pyproject errors (e.g. bad ini value) are silently
# swallowed. Both flags make pytest loud about configuration mistakes.
addopts = "--strict-markers --strict-config"
# Register the ``slow`` marker (used by conftest.py to tag long-running
# tests so ``pytest -m "not slow"`` can skip them during fast CI loops).
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# CT8 fix: add a coverage config so ``pytest --cov`` produces a meaningful
# report. Without this, coverage defaults to skipping the ``ops_*`` modules
# (the actual library code) and only covering the test files themselves.
[tool.coverage.run]
source = ["ops_kda", "ops_csa", "ops_hca", "ops_fused", "ops_decoding_cache"]
branch = true
omit = [
    "run_*",       # experiment runners (not library code)
    "kaggle_setup.py",
    "make_figures.py",
    "method_analysis.py",
    "test_*",
    "conftest.py",
]

[tool.coverage.report]
# Show missing lines in the report so contributors can see what to add
# tests for.
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Batch-3 fix: add Ruff config so ``ruff check .`` can be used as a CI gate.
# The config is intentionally permissive about line length (the codebase
# has many long docstring examples and URL comments that would be noisy
# to wrap) but enforces the most impactful rules: undefined names,
# unused imports, obvious bugs (F-class), and PEP 8 conventions (E/W).
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "results",
    "figures",
]

[tool.ruff.lint]
# Enable the F-class (Pyflakes) and E/W-class (PEP 8) rules. The F-class
# catches undefined names, unused imports, and redefined symbols — the
# highest-signal lint checks. The E/W-class catches style issues that
# often hide real bugs (e.g. E741 ambiguous variable names). We
# intentionally do NOT enable the full B-class (bugbear) or C-class
# (complexity) yet because the codebase has many long functions that
# would require a larger refactor to pass; those are tracked as
# Batch-3 "split large files" work in the code-review report.
select = ["E", "W", "F"]
# Ignore E402 (module-level import not at top) because the scripts use
# ``sys.path.insert`` before their local imports by design (mirroring
# the ``pip install -e .`` flat-package layout).
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
# run_correctness.py and method_analysis.py have several ``import copy``
# / ``import torch.nn.functional as F`` inside test functions for
# scoping clarity; allow F401 (unused import) in test files since the
# imports may be used in later test functions collected from the same
# module.
"run_correctness.py" = ["F401"]
"test_figures.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
# The codebase has thorough type annotations but mypy strict mode would
# flag many torch API stubs as untyped. Run mypy in "soft" mode for now
# (catches undefined names and obvious type errors, ignores missing
# stubs for third-party libraries).
ignore_missing_imports = true
# CT7 fix: enable ``check_untyped_defs``. The previous ``false`` disabled
# mypy's checks on untyped function bodies — exactly where most bugs hide.
# Typing the existing functions is incremental; enabling this flag at
# least catches NEW untyped functions that introduce type errors.
check_untyped_defs = true
warn_unused_ignores = true
